publish Restricted PSS profile

--- a/pod-security/restricted/kustomization.yaml
+++ b/pod-security/restricted/kustomization.yaml
@@ -3,3 +3,7 @@ bases:
 
 resources:
 - restrict-volume-types.yaml
+- deny-privilege-escalation.yaml
+- running-as-nonroot.yaml
+- non-root-groups.yaml
+- restrict-seccomp.yaml
