--- a/pod-security/default/disallow-privileged-containers.yaml
+++ b/pod-security/default/disallow-privileged-containers.yaml
@@ -18,7 +18,7 @@ spec:
       message: "Privileged mode is disallowed.\nThe fields spec.containers[*].securityContext.privileged and spec.initContainers[*].securityContext.privileged must not be set to true.\n"
       pattern:
         spec:
-          initContainers:
+          =(initContainers):
           - =(securityContext):
               =(privileged): "false"          
           containers:
