--- a/pod-security/default/disallow-selinux.yaml
+++ b/pod-security/default/disallow-selinux.yaml
@@ -20,7 +20,7 @@ spec:
         spec:
           =(securityContext):
             X(seLinuxOptions): "null"
-          initContainers:
+          =(initContainers):
           - =(securityContext):
               X(seLinuxOptions): "null"
           containers:
