--- a/pod-security/restricted/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp.yaml
@@ -21,7 +21,7 @@ spec:
           =(securityContext):
             =(seccompProfile):
               =(type): "RuntimeDefault"
-          initContainers:
+          =(initContainers):
           - =(securityContext):
               =(seccompProfile):
                 =(type): "RuntimeDefault"
