--- a/pod-security/default/disallow-adding-capabilities.yaml
+++ b/pod-security/default/disallow-adding-capabilities.yaml
@@ -18,11 +18,11 @@ spec:
       message: "Adding of additional capabilities beyond the default set is disallowed.\nThe fields spec.containers[*].securityContext.capabilities.add and spec.initContainers[*].securityContext.capabilities.add must be empty.\n"
       pattern:
         spec:
-          initContainers:
+          =(initContainers):
           - =(securityContext):
               =(capabilities):
-                add: ["null"]         
+                =(add): ["null"]         
           containers:
           - =(securityContext):
               =(capabilities):
-                add: ["null"]
+                =(add): ["null"]
