--- a/pod-security/kustomization.yaml
+++ b/pod-security/kustomization.yaml
@@ -1,5 +1,13 @@
 bases:
 - restricted
 
-patchesStrategicMerge:
-  - ""
+patches:
+- patch: |-
+    - op: replace
+      path: /spec/validationFailureAction
+      value: enforce    
+  target:
+    kind: ClusterPolicy
+
+
+
