--- a/pod-security/default/disallow-adding-capabilities.yaml
+++ b/pod-security/default/disallow-adding-capabilities.yaml
@@ -4,7 +4,8 @@ metadata:
   name: disallow-adding-capabilities
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
-    policies.kyverno.io/description: Adding additional capabilities beyond the default set must be disallowed.
+    policies.kyverno.io/description: >-
+      Adding additional capabilities beyond the default set must not be allowed.
 spec:
   validationFailureAction: audit
   background: true
@@ -15,14 +16,18 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Adding of additional capabilities beyond the default set is disallowed.\nThe fields spec.containers[*].securityContext.capabilities.add and spec.initContainers[*].securityContext.capabilities.add must be empty.\n"
+      message: >-
+        Adding of additional capabilities beyond the default set is no allowed.
+        The fields spec.containers[*].securityContext.capabilities.add and 
+        spec.initContainers[*].securityContext.capabilities.add must be empty."
       pattern:
         spec:
+          containers:
+            - name: "*"
+              =(securityContext):
+                =(capabilities):
+                  X(add): null
           =(initContainers):
           - =(securityContext):
               =(capabilities):
-                =(add): ["null"]         
-          containers:
-          - =(securityContext):
-              =(capabilities):
-                =(add): ["null"]
+                X(add): null
