--- a/pod-security/default/restrict-apparmor-profiles.yaml
+++ b/pod-security/default/restrict-apparmor-profiles.yaml
@@ -4,7 +4,10 @@ metadata:
   name: restrict-apparmor-profiles
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
-    policies.kyverno.io/description: On supported hosts, the 'runtime/default' AppArmor profile is applied by default. The default policy should prevent overriding or disabling the policy, or restrict overrides to an allowed set of profiles.
+    policies.kyverno.io/description: >-
+      On supported hosts, the 'runtime/default' AppArmor profile is applied by default. 
+      The default policy should prevent overriding or disabling the policy, or restrict 
+      overrides to an allowed set of profiles.
 spec:
   validationFailureAction: audit
   background: true
@@ -15,8 +18,11 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Specifying other AppArmor profiles is disallowed.\nThe annotation container.apparmor.security.beta.kubernetes.io must not be defined, or must not be set to anything other than `runtime/default`.\n"
+      message: >-
+        Specifying other AppArmor profiles is disallowed. The annotation
+        container.apparmor.security.beta.kubernetes.io must not be defined,
+        or must not be set to anything other than `runtime/default`.
       pattern:
-        =(metadata):
+        metadata:
           =(annotations):
-            =(container.apparmor.security.beta.kubernetes.io/?*): "runtime/default"
+            =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default"
