--- a/pod-security/restricted/deny-privilege-escalation.yaml
+++ b/pod-security/restricted/deny-privilege-escalation.yaml
@@ -4,7 +4,8 @@ metadata:
   name: deny-privilege-escalation
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
-    policies.kyverno.io/description: Privilege escalation (such as via set-user-ID or set-group-ID file mode) should not be allowed.
+    policies.kyverno.io/description: >-
+      Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
 spec:
   background: true
   validationFailureAction: audit
@@ -15,7 +16,11 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Privilege escalation is disallowed.\nThe fields spec.containers[*].securityContext.allowPrivilegeEscalation, and spec.initContainers[*].securityContext.allowPrivilegeEscalation must be undefined or set to `false`.\n"
+      message: >-
+        Privilege escalation is disallowed. The fields
+        spec.containers[*].securityContext.allowPrivilegeEscalation, and
+        spec.initContainers[*].securityContext.allowPrivilegeEscalation must
+        be undefined or set to `false`.
       pattern:
         spec:
           =(initContainers):
