--- a/pod-security/default/disallow-adding-capabilities.yaml
+++ b/pod-security/default/disallow-adding-capabilities.yaml
@@ -17,16 +17,15 @@ spec:
         - Pod
     validate:
       message: >-
-        Adding of additional capabilities beyond the default set is no allowed.
+        Adding of additional capabilities beyond the default set is not allowed.
         The fields spec.containers[*].securityContext.capabilities.add and 
         spec.initContainers[*].securityContext.capabilities.add must be empty.
       pattern:
         spec:
           containers:
-            - name: "*"
-              =(securityContext):
-                =(capabilities):
-                  X(add): null
+          - =(securityContext):
+              =(capabilities):
+                X(add): null
           =(initContainers):
           - =(securityContext):
               =(capabilities):
