--- a/pod-security/default/disallow-selinux.yaml
+++ b/pod-security/default/disallow-selinux.yaml
@@ -4,18 +4,22 @@ metadata:
   name: disallow-selinux
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
-    policies.kyverno.io/description: Setting custom SELinux options should be disallowed.
+    policies.kyverno.io/description: >-
+      SELinux options can be used to escalate privileges and should not be allowed.
 spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: selinux
+  - name: seLinux
     match:
       resources:
         kinds:
         - Pod
     validate:
-      message: "Setting custom SELinux options is disallowed.\nThe fields spec.securityContext.seLinuxOptions, spec.containers[*].securityContext.seLinuxOptions, and spec.initContainers[*].securityContext.seLinuxOptions must be empty.\n"
+      message: >-
+        Setting custom SELinux options is disallowed. The fields
+        spec.securityContext.seLinuxOptions, spec.containers[*].securityContext.seLinuxOptions,
+        and spec.initContainers[*].securityContext.seLinuxOptions must be empty.
       pattern:
         spec:
           =(securityContext):
