--- a/pod-security/restricted/non-root-groups.yaml
+++ b/pod-security/restricted/non-root-groups.yaml
@@ -4,18 +4,23 @@ metadata:
   name: non-root-groups
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
-    policies.kyverno.io/description: Containers should be forbidden from running with a root primary or supplementary GID.
+    policies.kyverno.io/description: >-
+      Containers should be forbidden from running with a root primary or supplementary GID.
 spec:
   background: true
   validationFailureAction: audit
   rules:
-  - name: non-root-groups-runasgroup
+  - name: check-runasgroup
     match:
       resources:
         kinds:
         - Pod
     validate:
-      message: "Running with root groups is disallowed.\nThe fields spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup, and spec.initContainers[*].securityContext.runAsGroup must be empty or greater than zero.\n"
+      message: >-
+        Running with root group IDs is disallowed. The fields
+        spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup,
+        and spec.initContainers[*].securityContext.runAsGroup must be empty
+        or greater than zero.
       pattern:
         spec:
           =(securityContext):
@@ -26,24 +31,28 @@ spec:
           containers:
           - =(securityContext):
               =(runAsGroup): ">0"
-  - name: non-root-groups-supplementalGroups
+  - name: check-supplementalGroups
     match:
       resources:
         kinds:
         - Pod
     validate:
-      message: "Adding of supplemental group IDs is disallowed.\nThe field spec.securityContext.supplementalGroups must not be defined.\n"
+      message: >-
+        Adding of supplemental group IDs is not allowed. The field
+        spec.securityContext.supplementalGroups must not be defined.
       pattern:
         spec:
           =(securityContext):
             =(supplementalGroups): ["null"]
-  - name: non-root-groups-fsGroup
+  - name: check-fsGroup
     match:
       resources:
         kinds:
         - Pod
     validate:
-      message: "Changing of file system groups is disallowed.\nThe field spec.securityContext.fsGroup must not be defined.\n"
+      message: >-
+        Changing of file system groups is not allowed. The field
+        spec.securityContext.fsGroup must not be defined.
       pattern:
         spec:
           =(securityContext):
