--- a/pod-security/restricted/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp.yaml
@@ -4,7 +4,9 @@ metadata:
   name: restrict-seccomp
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
-    policies.kyverno.io/description: The RuntimeDefault seccomp profile must be required, or allow specific additional profiles.
+    policies.kyverno.io/description: >-
+      The runtime default seccomp profile must be required, or only specific
+      additional profiles should be allowed.
 spec:
   background: true
   validationFailureAction: audit
@@ -15,17 +17,22 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Use of custom Seccomp profiles is disallowed.\nThe fields spec.securityContext.seccompProfile.type, spec.containers[*].securityContext.seccompProfile.type, and spec.initContainers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault`.\n"
+      message: >-
+        Use of custom Seccomp profiles is disallowed. The fields
+        spec.securityContext.seccompProfile.type,
+        spec.containers[*].securityContext.seccompProfile.type, and
+        spec.initContainers[*].securityContext.seccompProfile.type
+        must be unset or set to `runtime/default`.
       pattern:
         spec:
           =(securityContext):
             =(seccompProfile):
-              =(type): "RuntimeDefault"
+              =(type): "runtime/default"
           =(initContainers):
           - =(securityContext):
               =(seccompProfile):
-                =(type): "RuntimeDefault"
+                =(type): "runtime/default"
           containers:
           - =(securityContext):
               =(seccompProfile):
-                =(type): "RuntimeDefault"
+                =(type): "runtime/default"
