--- a/pod-security/tests/restricted/test-require-run-as-nonroot.yaml
+++ b/pod-security/tests/restricted/test-require-run-as-nonroot.yaml
@@ -15,14 +15,14 @@ spec:
         app: test
     spec:
       securityContext:
-        runAsNonRoot: false
-      initContainers:
-      - name: alpine1
-        image: alpine
-      - name: alpine2
-        image: alpine
-        securityContext:
-          runAsNonRoot: true
+        runAsNonRoot: true
+      # initContainers:
+      # - name: alpine1
+      #   image: alpine
+      # - name: alpine2
+      #   image: alpine
+      #   securityContext:
+      #     runAsNonRoot: false
       containers:
       - name: busybox
         image: busybox
@@ -30,4 +30,4 @@ spec:
       - name: nginx
         image: nginx
         securityContext:
-          runAsNonRoot: true
+          runAsNonRoot: false
