update sample policies

--- a/best-practices/add_ns_quota.yaml
+++ b/best-practices/add_ns_quota.yaml
@@ -3,10 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: add-ns-quota
   annotations:
-    policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: To limit the number of objects, as well as the 
-      total amount of compute that may be consumed by a single namespace, create 
-      a default resource quota for each namespace.
+    policies.kyverno.io/title: Add Quota
+    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/description: >-
+      To limit the number of objects, as well as the total amount of compute that 
+      may be consumed by a single namespace, create a default resource quota for 
+      each namespace.
 spec:
   rules:
   - name: generate-resourcequota
@@ -14,13 +16,6 @@ spec:
       resources:
         kinds:
         - Namespace
-    exclude:
-      resources:
-        namespaces:
-          - "kube-system"
-          - "default"
-          - "kube-public"
-          - "kyverno"
     generate:
       kind: ResourceQuota
       name: default-resourcequota
