--- a/best-practices/require_drop_all.yaml
+++ b/best-practices/require_drop_all.yaml
@@ -2,29 +2,34 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: drop-all-capabilities
+  annotations:
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      Capabilities permit privileged actions without giving full root access. All 
+      capabilities should be dropped from a pod, with only those required added back.
 spec:
   validationFailureAction: audit
   rules:
-  - name: drop-all-containers
+  - name: check-containers
     match:
       resources:
         kinds:
         - Pod
     validate:
-      message: "Drop all must be defined for every container in the Pod."
+      message: "All capabilities should be dropped with only those required added back."
       pattern:
         spec:
           containers:
           - securityContext:
               capabilities:
                 drop: ["ALL"]
-  - name: drop-all-initcontainers
+  - name: check-init-containers
     match:
       resources:
         kinds:
         - Pod
     validate:
-      message: "Drop all must be defined for every container in the Pod."
+      message: "All capabilities should be dropped with only those required added back."
       pattern:
         spec:
           initContainers:
