--- a/best-practices/require_pod_requests_limits.yaml
+++ b/best-practices/require_pod_requests_limits.yaml
@@ -1,13 +1,15 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: require-pod-requests-limits
+  name: require-requests-limits
   annotations:
-    policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: As application workloads share cluster resources, it is important 
-      to limit resources requested and consumed by each pod. It is recommended to require 
-      'resources.requests' and 'resources.limits.memory' per pod. If a namespace level request or limit is 
-      specified, defaults will automatically be applied to each pod based on the 'LimitRange' configuration.
+    policies.kyverno.io/title: Require Limits and Requests 
+    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/description: >-
+      As application workloads share cluster resources, it is important to limit resources 
+      requested and consumed by each pod. It is recommended to require 'resources.requests' 
+      and 'resources.limits.memory' per pod. If a namespace level request or limit is specified, 
+      defaults will automatically be applied to each pod based on the 'LimitRange' configuration.
 spec:
   validationFailureAction: audit
   rules:
