--- a/best-practices/require_ro_rootfs.yaml
+++ b/best-practices/require_ro_rootfs.yaml
@@ -3,11 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: require-ro-rootfs
   annotations:
-    policies.kyverno.io/category: Security
-    policies.kyverno.io/description: A read-only root file system helps to enforce an immutable 
-      infrastructure strategy; the container only needs to write on the mounted volume that p
-      ersists the state. An immutable root filesystem can also prevent malicious binaries from 
-      writing to the host system.
+    policies.kyverno.io/title: Require Read-Only Root FS
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      A read-only root file system helps to enforce an immutable infrastructure strategy; 
+      the container only needs to write on the mounted volume that persists the state. 
+      An immutable root filesystem can also prevent malicious binaries from writing to the 
+      host system.
 spec:
   validationFailureAction: audit
   rules:
