--- a/other/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars.yaml
@@ -2,15 +2,20 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: secrets-not-from-env-vars
+  annotations:
+    policies.kyverno.io/title: Disallow Secrets from Env Vars
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Sample policy to disallow using secrets from environment variables 
+      which are visible in resource definitions. 
 spec:
-  background: false
   validationFailureAction: audit
   rules:
   - name: secrets-not-from-env-vars
     match:
-    resources:
-        kinds:
-        - Pod
+      resources:
+          kinds:
+          - Pod
     validate:
       message: "Secrets must be mounted as volumes, not as environment variables."
       pattern:
