--- a/other/inject_sidecar_deployment.yaml
+++ b/other/inject_sidecar_deployment.yaml
@@ -2,6 +2,11 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: inject-sidecar
+  annotations:
+    policies.kyverno.io/title: Inject Sidecar Container
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Sample policy that injects a sidecar container into Pods that match an annotation.  
 spec:
   background: false
   rules:
