--- a/other/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer.yaml
@@ -1,7 +1,12 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: no-loadbalancers
+  name: no-loadbalancer-service
+  annotations:
+    policies.kyverno.io/title: Disallow Service Type LoadBalancer
+    policies.kyverno.io/category: Sample 
+    policies.kyverno.io/description: >-
+      Sample policy to restrict use of Service type LoadBalancer.
 spec:
   validationFailureAction: audit
   rules:
