--- a/other/spread_pods_across_topology.yaml
+++ b/other/spread_pods_across_topology.yaml
@@ -2,6 +2,11 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: spread-pods
+  annotations:
+    policies.kyverno.io/title: Spread Pods Across Nodes 
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Sample policy to spread pods matching a label across nodes.
 spec:
   rules:
     - name: spread-pods-across-nodes
