--- a/pod-security/default/disallow-proc-mount.yaml
+++ b/pod-security/default/disallow-proc-mount.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: disallow-proc-mount
+  name: require-default-proc-mount
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
     policies.kyverno.io/description: >-
@@ -10,14 +10,14 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: proc-mount
+  - name: check-proc-mount
     match:
       resources:
         kinds:
         - Pod
     validate:
       message: >-
-        Changing the proc mount from the defaults is not allowed. The fields
+        Changing the proc mount from the default is not allowed. The fields
         spec.containers[*].securityContext.procMount and
         spec.initContainers[*].securityContext.procMount must not be changed 
         from `Default`.
