--- a/pod-security/default/disallow-selinux.yaml
+++ b/pod-security/default/disallow-selinux.yaml
@@ -3,6 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: disallow-selinux
   annotations:
+    policies.kyverno.io/title: Disallow SELinux
     policies.kyverno.io/category: Pod Security Standards (Default)
     policies.kyverno.io/description: >-
       SELinux options can be used to escalate privileges and should not be allowed.
