--- a/pod-security/restricted/non-root-groups.yaml
+++ b/pod-security/restricted/non-root-groups.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: non-root-groups
+  name: require-non-root-groups
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: >-
