--- a/best-practices/disallow_default_namespace.yaml
+++ b/best-practices/disallow_default_namespace.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: disallow-default-namespace
   annotations:
-    pod-policies.kyverno.io/autogen-controllers: none	
-    policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: Kubernetes namespaces are an optional feature 
-      that provide a way to segment and isolate cluster resources across multiple 
-      applications and users. As a best practice, workloads should be isolated with 
-      namespaces. Namespaces should be required and the default (empty) namespace 
-      should not be used.
+    pod-policies.kyverno.io/autogen-controllers: none
+    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/description: >-
+      Kubernetes namespaces are an optional feature that provide a way to segment and 
+      isolate cluster resources across multiple applications and users. As a best 
+      practice, workloads should be isolated with namespaces. Namespaces should be required 
+      and the default (empty) namespace should not be used.
 spec:
   validationFailureAction: audit
   rules:
