--- a/best-practices/disallow_docker_sock_mount.yaml
+++ b/best-practices/disallow_docker_sock_mount.yaml
@@ -1,12 +1,13 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: disallow-docker-sock-mount
+  name: disallow-container-sock-mounts
   annotations:
-    policies.kyverno.io/category: Security
-    policies.kyverno.io/description: The Docker socket bind mount allows access to the 
-      Docker daemon on the node. This access can be used for privilege escalation and 
-      to manage containers outside of Kubernetes, and hence should not be allowed.  
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      Container daemon socket bind mounts allows access to the container engine on the 
+      node. This access can be used for privilege escalation and to manage containers 
+      outside of Kubernetes, and hence should not be allowed.  
 spec:
   validationFailureAction: audit
   rules:
@@ -22,3 +23,27 @@ spec:
           =(volumes):
             - =(hostPath):
                 path: "!/var/run/docker.sock"
+  - name: validate-containerd-sock-mount
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: "Use of the Containerd Unix socket is not allowed"
+      pattern:
+        spec:
+          =(volumes):
+            - =(hostPath):
+                path: "!/var/run/containerd.sock"
+  - name: validate-crio-sock-mount
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: "Use of the CRIO Unix socket is not allowed"
+      pattern:
+        spec:
+          =(volumes):
+            - =(hostPath):
+                path: "!/var/run/crio.sock"                
