--- a/best-practices/disallow_helm_tiller.yaml
+++ b/best-practices/disallow_helm_tiller.yaml
@@ -3,9 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: disallow-helm-tiller
   annotations:
-    policies.kyverno.io/category: Security
-    policies.kyverno.io/description: Tiller has known security challenges. It requires administrative privileges and acts as a shared
-      resource accessible to any authenticated user. Tiller can lead to privilge escalation as restricted users can impact other users.
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      Tiller has known security challenges. It requires administrative privileges and 
+      acts as a shared resource accessible to any authenticated user. Tiller can lead 
+      to privilge escalation as restricted users can impact other users.
 spec:
   validationFailureAction: audit
   rules:
