--- a/best-practices/disallow_latest_tag.yaml
+++ b/best-practices/disallow_latest_tag.yaml
@@ -3,10 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: disallow-latest-tag
   annotations:
-    policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: The ':latest' tag is mutable and can lead to 
-      unexpected errors if the image changes. A best practice is to use an immutable 
-      tag that maps to a specific version of an application pod.
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      The ':latest' tag is mutable and can lead to unexpected errors if the 
+      image changes. A best practice is to use an immutable tag that maps to 
+      a specific version of an application pod.
 spec:
   validationFailureAction: audit
   rules:
