--- a/best-practices/require_labels.yaml
+++ b/best-practices/require_labels.yaml
@@ -2,6 +2,12 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: require-labels
+  annotations:
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      The ':latest' tag is mutable and can lead to unexpected errors if the 
+      image changes. A best practice is to use an immutable tag that maps to 
+      a specific version of an application pod.  
 spec:
   validationFailureAction: audit
   rules:
@@ -16,5 +22,6 @@ spec:
         metadata:
           labels:
             app.kubernetes.io/name: "?*"
-            # You can add more labels if you wish the policy to validate more than just one is present. Uncomment the below line, or add new ones.
+            # You can add more labels if you wish the policy to validate more 
+            # than just one is present. Uncomment the below line, or add new ones.
             #app.kubernetes.io/component: "?*
