--- a/other/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity.yaml
@@ -1,17 +1,22 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: insert-podantiaffinity
+  name: insert-pod-antiaffinity
+  annotations:
+    policies.kyverno.io/title: Add Pod Anti-Affinity
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Sample policy to add Pod anti-affinity
 spec:
   rules:
-    - name: insert-podantiaffinity
+    - name: insert-pod-antiaffinity
       match:
         resources:
           kinds:
             - Deployment
       preconditions:
-        # This precondition ensures that the label `app` is applied to Pods within the Deployment resource.
-      - key: "{{request.object.metadata.labels.app}}"
+        # This precondition selects Pods with the label `app`
+      - key: "{{request.object.spec.template.metadata.labels.app}}"
         operator: NotEquals
         value: ""
       # Mutates the Deployment resource to add fields.
@@ -20,7 +25,7 @@ spec:
           spec:
             template:
               spec:
-                # Add the `affinity` key and others if not already specified in the Deployment manifest.
+                # Add the `affinity`if not already specified.
                 +(affinity):
                   +(podAntiAffinity):
                     +(preferredDuringSchedulingIgnoredDuringExecution):
