--- a/other/imagepullpolicy-always.yaml
+++ b/other/imagepullpolicy-always.yaml
@@ -2,6 +2,11 @@ apiVersion : kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: imagepullpolicy-always
+  annotations:
+    policies.kyverno.io/title: Set imagePullPolicy
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Sample policy that sets imagePullPolicy to "Always" when the "latest" tag is used.
 spec:
   validationFailureAction: audit
   background: false
@@ -12,8 +17,10 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "The imagePullPolicy must be set to `Always` for all containers when a tag other than `latest` is used."  
+      message: >-
+        The imagePullPolicy must be set to `Always` when the tag `latest` is used.
       pattern:
         spec:
           containers:
-          - imagePullPolicy: Always
+          - (image): "*:latest | !*:*"
+            imagePullPolicy: "Always"
