--- a/other/require_deployments_have_multiple_replicas.yaml
+++ b/other/require_deployments_have_multiple_replicas.yaml
@@ -2,6 +2,11 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: deployment-has-multiple-replicas
+  annotations:
+    policies.kyverno.io/title: Require Multiple Replicas
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Sample policy that requires more than one replica for deployments.    
 spec:
   validationFailureAction: audit
   rules:
@@ -10,15 +15,8 @@ spec:
         resources:
           kinds:
             - Deployment
-      exclude:
-        resources:
-          namespaces:
-          - kyverno
-          - kube-system
-          - kube-node-lease
-          - kube-public
       validate:
-        message: "Deployments must have more than one replica to ensure availability."
+        message: "Deployments should have more than one replica to ensure availability."
         pattern:
           spec:
             replicas: ">1"
