--- a/other/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token.yaml
@@ -3,11 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: restrict-automount-sa-token
   annotations:
-    policies.kyverno.io/category: Security
-    policies.kyverno.io/description: Kubernetes automatically mounts service account 
-      credentials in each pod. The service account may be assigned roles allowing pods 
-      to access API resources. To restrict access, opt out of auto-mounting tokens by 
-      setting automountServiceAccountToken to false.
+    policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      Kubernetes automatically mounts service account credentials in each pod. 
+      The service account may be assigned roles allowing pods to access API resources. 
+      To restrict access, opt out of auto-mounting tokens by setting 
+      automountServiceAccountToken to false.
 spec:
   rules:
   - name: validate-automountServiceAccountToken
