--- a/other/restrict_ingress_classes.yaml
+++ b/other/restrict_ingress_classes.yaml
@@ -3,10 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: restrict-ingress-classes
   annotations:
-    policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: It can be useful to restrict Ingress resources to a set of 
-      known ingress classes that are allowed in the cluster. You can customize this policy to 
-      allow ingress classes that are configured in the cluster.
+    policies.kyverno.io/title: Restrict Ingress Classes
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/description: >-
+      It can be useful to restrict Ingress resources to a set of known ingress classes 
+      that are allowed in the cluster. You can customize this policy to allow ingress 
+      classes that are configured in the cluster.
 spec:
   rules:
   - name: validate-ingress
@@ -19,4 +21,4 @@ spec:
       pattern:
         metadata:
           annotations:
-            kubernetes.io/ingress.class: "F5 | nginx"
+            kubernetes.io/ingress.class: "HAProxy | nginx"
