--- a/pod-security/default/disallow-adding-capabilities.yaml
+++ b/pod-security/default/disallow-adding-capabilities.yaml
@@ -1,11 +1,12 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: disallow-adding-capabilities
+  name: disallow-add-capabilities
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
     policies.kyverno.io/description: >-
-      Adding additional capabilities beyond the default set must not be allowed.
+      Capabilities permit privileged actions without giving full root access.
+      Adding capabilities beyond the default set must not be allowed.
 spec:
   validationFailureAction: audit
   background: true
