--- a/pod-security/restricted/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp.yaml
@@ -3,6 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: restrict-seccomp
   annotations:
+    policies.kyverno.io/title: Restrict Seccomp
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: >-
       The runtime default seccomp profile must be required, or only specific
